# insta_scrap

./: .gitignore  .pre-commit-config.yaml  README.md  capture.py  capture_bypass.py  env.example  main.py  pyproject.toml  reels.txt  run.bat  run.sh  run_mitmweb.py  test_shortrend.py
scripts/: setup_mitmproxy.sh
src/: __init__.py  __main__.py  browser.py  config.py  exceptions.py  main.py  models.py  scraper.py  shortrend_scraper.py
src/utils/: __init__.py  human_behavior.py  logger.py  wait_utils.py
tests/: test_scraper.py
